Fix collapsing header section.

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -12,7 +12,7 @@
 }
 
 .pageContentSection {
-  margin: 0 auto;
+  margin: 0 auto 3rem auto;
   width: 100%;
   max-width: 1200px;
   box-sizing: border-box;
