--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -8,13 +8,14 @@
 
 .headerSection {
   background-image: url('../../assets/images/header_background.jpeg');
+  position: relative;
+  z-index: 1000000;
   height: 35vh;
   max-height: 700px;
   min-height: 110px;
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
-  position: relative;
   box-shadow: 0px -1px 5px 1px rgba(0,0,0,0.28);
 };
 
