--- a/src/components/Widgets/Animations.scss
+++ b/src/components/Widgets/Animations.scss
@@ -3,8 +3,10 @@
 //LOAD ANIMATION
 .loading {
     position: fixed;
-    top: 0; right: 0;
-    bottom: 0; left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background: #fff;
 }
 
@@ -58,7 +60,6 @@
 .navButtonStyleRed {
   background: red;
 }
-
 
 .linkStyle {
   color: #fff;
